Nav item default border

--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -101,7 +101,7 @@ $padding: .8rem
     text-transform: uppercase
     font-weight: bold
     transition: .5s
-    border-width: 0px
+    border: 0 solid transparent
     &:hover
       border-left: 2rem solid white
       padding-left: 1rem
