--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -1,17 +1,33 @@
 #index
   padding: 0
   width: 100%
-  height: 100vh
-  background-image: url("img/back.jpg")
+  min-height: 100vh
+  background: map-get($colors, 'primary')
+  position: relative
+  display: flex
+  justify-content: center
+  @include breakpoint('sm')
+    align-items: center
 
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed
-  background-position: center
-  background-repeat: no-repeat
-  background-size: cover
+  &::before
+    content: ""
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-image: url(img/back3.webp)
+    background-attachment: fixed
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
+    filter: blur(1px)
+    opacity: .2
+
+  &>*
+    position: relative
 
   .section__wrap
-    background: rgba(map-get($colors, 'primary'), .6)
-    width: inherit
-    height: inherit
     padding: $space + 1rem 1rem 1rem
+    @include breakpoint('sm')
+      padding: $space 0
