--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -4,6 +4,9 @@ $box-shadow: $shadow;
 $text-shadow: $shadow;
 
 $space: 4.599375rem;
+$margin: .8rem;
+$padding: $margin;
+$border-radius: 3px;
 
 $colors: (
   // 'primary': #104e92,
