--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,10 +4,11 @@
 @import '_mixins'
 @import '_basic'
 @import '_nav'
-@import '_helpers'
 @import '_logo'
 @import '_main-container'
 @import '_section'
 @import '_img'
 @import '_custom'
 @import '_scrollbar'
+@import '_btn.sass'
+@import '_helpers'
