--- a/sass/_section.sass
+++ b/sass/_section.sass
@@ -11,4 +11,7 @@
     margin-bottom: 1rem
 
   &__subtitle
-    font-size: 1.2em
+    margin-bottom: $margin*2
+    @include breakpoint('sm')
+      margin-bottom: $space
+      font-size: 1.2em
