Add Generador de horarios in Portafolio

--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -32,3 +32,6 @@
     width: 100%
     @include breakpoint('sm')
       padding: $space 0
+
+#portfolio
+  background: #{map-get($colors, 'generador')}
