--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -14,7 +14,10 @@ $colors: (
   // 'secondary': #f44336,
   'secondary': #E3872D,
   'light': white,
-  'back': #f8f9fa
+  'back': #f8f9fa,
+  'generador': #2b9cce,
+  'fb': #4267b2,
+  'black': #565656
 );
 
 $breakpoints: (
