--- a/sass/_section.sass
+++ b/sass/_section.sass
@@ -2,7 +2,9 @@
   min-height: 100vh
   background: var(--color)
   margin-left: 0
-  padding: $space + 1rem 1rem 1rem
+  padding: $space + $padding $padding $padding
+  @include breakpoint('sm')
+    padding: $padding
 
   &__title
     font-size: 2.5em
