--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,5 +1,5 @@
 @import 'normalize'
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700')
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text|Montserrat:400,700')
 @import '_vars'
 @import '_mixins'
 @import '_basic'
@@ -10,5 +10,6 @@
 @import '_img'
 @import '_custom'
 @import '_scrollbar'
-@import '_btn.sass'
+@import '_btn'
+@import '_card'
 @import '_helpers'
