--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -35,6 +35,24 @@
 
 #portfolio
   background: #{map-get($colors, 'generador')}
+  width: 100%
+  min-height: 100vh
+  position: relative
+  &>*
+    position: relative
+  &::before
+    content: ""
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-image: url(img/back-h.webp)
+    background-attachment: fixed
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
+    opacity: .2
 
 .contact
   display: grid
