--- a/sass/_custom.sass
+++ b/sass/_custom.sass
@@ -60,3 +60,25 @@
     grid-template-columns: 42% 1fr
   @include breakpoint('lg')
     grid-template-columns: 35% 1fr
+
+#about__content
+  display: grid
+  grid-gap: $margin
+
+  img
+    @extend %shadow
+    width: 100%
+    height: 200px
+    object-fit: cover
+    border-radius: $border-radius
+
+  @include breakpoint('md')
+    grid-template-columns: 20% 1fr
+    img
+      height: 100%
+
+  @include breakpoint('lg')
+    grid-template-columns: 30% 1fr
+
+  @include breakpoint('xl')
+    grid-template-columns: 40% 1fr
