Cambiar foto y agregar caracteristica
Experto en ciberseguridad

--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -67,6 +67,7 @@
   'desarrollador web',
   'programador',
   'tutor de programación',
+  'experto en ciberseguridad',
   'admin de bases de datos',
   'entusiasta de la tecnología';
   @include text-animation($characteristics);
